@@ -101,7 +101,8 @@ Bar_number_engraver::create_items ()
 
 ADD_TRANSLATOR (Bar_number_engraver,
 		/* doc */ "A bar number is created whenever measurePosition "
-		"is zero and there is a bar line. It is \n"
+		"is zero and when there is a bar line (ie. when @code{whichBar} is set. "
+		"It is \n"
 		"put on top of all staves, and appears only at  left side of the staff. "
 		"The staves are taken from @code{stavesFound}, which is maintained by "
 		"@code{@ref{Staff_collecting_engraver}}. ",
